[package]
name = "Geser"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1", features = ["full", "fs"] }
tokio-rustls = "0.23"
rustls = "0.20"
rustls-pemfile = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
pulldown-cmark = "0.9"
dashmap = "5"
url = "2"
percent-encoding = "2"